--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  transition: 0.4s;
   position: fixed;
   top: 0;
   left: 0;
