--- a/styles/information/information.css
+++ b/styles/information/information.css
@@ -7,10 +7,16 @@
   background-color: #2b2b2b;
   width: 100%;
 }
+.information_container a {
+  text-decoration: none;
+  color: #00aef3;
+  font-size: 20px;
+}
 
 .info_box {
   width: 958px;
   margin: 0 auto;
+  padding: 30px;
 }
 .info_box p {
   color: #f4f4f4;
