--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,7 @@
 @import url(styles/header/header.css);
 @import url(styles/banner/banner.css);
+@import url(styles/information/information.css);
+@import url(styles/courses/courses.css);
 
 @font-face {
   font-display: block;
