--- a/styles/information/information.scss
+++ b/styles/information/information.scss
@@ -12,20 +12,22 @@
 .information_container {
   background-color: #2b2b2b;
   width: 100%;
-  a {
+
+  .read_more_link {
     text-decoration: none;
     color: #00aef3;
     font-size: 20px;
+    display: inline-block;
+    margin-top: 30px;
   }
-}
-.info_box {
-  width: 958px;
-  margin: 0 auto;
-  padding: 30px;
-
-  p {
-    color: #f4f4f4;
-    font-size: 28px;
-    font-family: wf_dd28b3957391427eb54de1c9e;
+  .info_box {
+    width: 958px;
+    margin: 0 auto;
+    padding: 50px 0 50px;
+    p {
+      color: #f4f4f4;
+      font-size: 28px;
+      font-family: wf_dd28b3957391427eb54de1c9e;
+    }
   }
 }
