Fix CSS styles in header, information section, and learning courses section

--- a/style.css
+++ b/style.css
@@ -12,4 +12,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: main_font;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 980px;
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
