--- a/style.scss
+++ b/style.scss
@@ -20,3 +20,9 @@
   box-sizing: border-box;
   font-family: main_font;
 }
+
+.container {
+  margin: 0 auto;
+  max-width: 980px;
+  width: 100%;
+}
