--- a/styles/banner/banner.css
+++ b/styles/banner/banner.css
@@ -4,7 +4,7 @@
   src: url("https://static.wixstatic.com/ufonts/643d94_f52303b2efea42e1b4aeed119e42672e/woff2/file.woff2") format("woff2"), url("https://static.wixstatic.com/ufonts/643d94_f52303b2efea42e1b4aeed119e42672e/woff/file.woff") format("woff"), url("https://static.wixstatic.com/ufonts/643d94_f52303b2efea42e1b4aeed119e42672e/ttf/file.ttf") format("ttf");
 }
 .main_container {
-  padding-top: 6%;
+  padding-top: 82px;
 }
 
 .banner_container {
@@ -15,7 +15,6 @@
   justify-content: center;
   width: 100%;
   height: 352px;
-  padding-left: 50px;
 }
 .banner_container h3 {
   font-size: 42px;
