--- a/styles/banner/banner.scss
+++ b/styles/banner/banner.scss
@@ -10,7 +10,7 @@
 }
 
 .main_container {
-  padding-top: 6%;
+  padding-top: 82px;
 }
 .banner_container {
   background: url(../../assets/images/banner.jpg) no-repeat;
@@ -20,7 +20,7 @@
   justify-content: center;
   width: 100%;
   height: 352px;
-  padding-left: 50px;
+  // padding-left: 50px;
   h3 {
     font-size: 42px;
     color: rgb(244, 244, 244);
