Update styles in FAQ section

--- a/styles/courses/courses.scss
+++ b/styles/courses/courses.scss
@@ -36,7 +36,7 @@
   height: 414px;
   display: flex;
   flex-direction: column;
-  margin: 0 13px 12px;
+  margin: 0 13px 12px 0;
   .course_img {
     height: 150px;
     img {
