--- a/styles/information/information.scss
+++ b/styles/information/information.scss
@@ -21,7 +21,7 @@
     margin: 43px 0 57px;
     transition: 0.4s;
     &:hover {
-      color: rgb(170, 170, 170);
+      color: #aaaaaa;
     }
   }
   .info_box {
