--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@
 
 @font-face {
   font-display: block;
-  font-family: main_font;
+  font-family: wf_dd28b3957391427eb54de1c9e;
   src: url("https://static.wixstatic.com/ufonts/643d94_dd28b3957391427eb54de1c9eff7cfb1/woff2/file.woff2")
       format("woff2"),
     url("https://static.wixstatic.com/ufonts/643d94_dd28b3957391427eb54de1c9eff7cfb1/woff/file.woff")
@@ -19,7 +19,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: main_font;
+  font-family: wf_dd28b3957391427eb54de1c9e;
 }
 
 .container {
