--- a/styles/courses/courses.css
+++ b/styles/courses/courses.css
@@ -31,7 +31,7 @@
   height: 414px;
   display: flex;
   flex-direction: column;
-  margin: 0 13px 12px;
+  margin: 0 13px 12px 0;
 }
 .course_box .course_img {
   height: 150px;
