--- a/styles/questions/questions.scss
+++ b/styles/questions/questions.scss
@@ -41,19 +41,11 @@
       position: relative;
       flex-direction: column;
       padding: 24px 0;
+      border-bottom: 1px solid #353131;
       &.active {
         img {
           transform: rotate(180deg);
         }
-      }
-
-      &::after {
-        content: "";
-        width: 100%;
-        height: 1px;
-        background-color: #353131;
-        position: absolute;
-        bottom: 0;
       }
       .faq_question {
         display: flex;
