--- a/styles/footer/footer.scss
+++ b/styles/footer/footer.scss
@@ -1,50 +1,54 @@
-.site_footer {
+.site-footer {
   background-color: #1a1e1f;
   padding: 50px 0;
-
-  .footer_logos_container {
+  .footer-logos-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    .tbc_logo {
+    .tbc-logo {
       width: 106px;
       height: 30px;
       object-fit: cover;
     }
-    .facebook_logo {
-      margin-right: 7px;
-    }
-    .social_media_logos img {
+    .social-media-logos img {
       width: 39px;
       height: 39px;
       object-fit: cover;
     }
+    a {
+      text-decoration: none;
+    }
+    .facebook-logo {
+      margin-right: 7px;
+    }
   }
-  .footer_text {
+  .footer-text {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 20px;
-    .copyright_terms_box {
-      p {
+    .copyright-terms-box {
+      .copyright-box span {
         color: #fff;
-        font-size: 14px;
+      }
+      a {
+        text-decoration: none;
+        cursor: pointer;
+        color: #fff;
+        transition: 0.4s;
+      }
+      .terms-link {
+        margin-top: 20px;
+        display: inline-block;
+        &:hover {
+          color: #aaaaaa;
+        }
       }
     }
-    a {
-      text-decoration: none;
-      cursor: pointer;
-      color: #fff;
-      transition: 0.4s;
-    }
-    .terms_link {
-      margin-top: 20px;
-      &:hover a {
-        color: #aaaaaa;
-      }
-    }
-    .contact_link {
+    .contact-link {
       border-radius: 5px;
+      text-decoration: none;
+      color: #fff;
       padding: 7px 30px;
       background-color: #00aef3;
       transition: 0.4s;
