--- a/styles/banner/banner.css
+++ b/styles/banner/banner.css
@@ -1,13 +1,12 @@
 @font-face {
   font-display: block;
-  font-family: banner_font;
+  font-family: wf_f52303b2efea42e1b4aeed119;
   src: url("https://static.wixstatic.com/ufonts/643d94_f52303b2efea42e1b4aeed119e42672e/woff2/file.woff2") format("woff2"), url("https://static.wixstatic.com/ufonts/643d94_f52303b2efea42e1b4aeed119e42672e/woff/file.woff") format("woff"), url("https://static.wixstatic.com/ufonts/643d94_f52303b2efea42e1b4aeed119e42672e/ttf/file.ttf") format("ttf");
 }
 .main_container {
   padding-top: 82px;
 }
-
-.banner_container {
+.main_container .banner_container {
   background: url(../../assets/images/banner.jpg) no-repeat;
   background-size: cover;
   display: flex;
@@ -16,14 +15,16 @@
   width: 100%;
   height: 352px;
 }
-.banner_container h3 {
-  font-size: 42px;
-  color: rgb(244, 244, 244);
-  font-family: banner_font;
+.main_container .banner_container .banner-title {
   margin-bottom: 20px;
 }
-.banner_container span {
+.main_container .banner_container .banner-title h3 {
+  color: rgb(244, 244, 244);
+  font-family: wf_f52303b2efea42e1b4aeed119;
+  font-size: 48px;
+}
+.main_container .banner_container span {
   font-size: 34px;
   color: rgb(244, 244, 244);
-  font-family: banner_font;
+  font-family: wf_f52303b2efea42e1b4aeed119;
 }/*# sourceMappingURL=banner.css.map */
