--- a/styles/banner/banner.scss
+++ b/styles/banner/banner.scss
@@ -12,9 +12,9 @@
 $base-font: wf_f52303b2efea42e1b4aeed119;
 $base-color: rgb(244, 244, 244);
 
-.main_container {
+.main-container {
   padding-top: 82px;
-  .banner_container {
+  .banner-container {
     background: url(../../assets/images/banner.jpg) no-repeat;
     background-size: cover;
     display: flex;
