start slider section set up

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 @import url(styles/courses/courses.css);
 @import url(styles/questions/questions.css);
 @import url(styles/footer/footer.css);
+@import url(styles/slider/slider.css);
 @font-face {
   font-display: block;
   font-family: wf_dd28b3957391427eb54de1c9e;
